fix body overflow to allow vertical scrolling and change background pseudo-element from absolute to fixed positioning

--- a/themes/nomad-tech/assets/scss/main.scss
+++ b/themes/nomad-tech/assets/scss/main.scss
@@ -948,11 +948,12 @@ section {
 // Apply to body
 body {
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   
   &::before {
     content: '';
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
